--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9326,7 +9326,7 @@ area {
         right: 0;
         bottom: -4px;
         margin: auto;
-        background: #ffff;
+        background: #243C78;
     }
 }
 
@@ -9472,13 +9472,14 @@ area {
 }
 
 .tammina-session {
-    background-image: url('../TAMS\ imgs/locode-&-why-tech-bg.svg');
+    background-image: url('../CEO/hero-bg-shape\ \(4\).svg');
     width: 100%;
-    height: 200vh;
+    height: 130vh;
     background-size: cover;
     display: grid;
     place-content: center;
-    padding: 50px 0px;
+    padding: 0px 0px;
+    background-position: center;
 
     .tammina-session-reports {
         position: relative;
@@ -9506,6 +9507,8 @@ area {
         display: grid;
         text-align: center;
         align-items: center;
+        position: absolute;
+        bottom: 45px;
 
         h2 {
             font-family: 'Racing Sans One';
@@ -9850,13 +9853,19 @@ border-radius: 15px;
 }
 
 .design-card-support {
-    height: auto;
+    height: 205px;
     animation: changeBackgroundColor 7s infinite;
     box-shadow: 0px 4px 33px rgba(0, 0, 0, 0.44);
     border-radius: 50px 20px;
     display: grid;
     text-align: center;
     align-items: center;
+    position: absolute;
+    bottom: 26px;
+    background: linear-gradient(96.21deg, #9E4EB3 22.34%, #EB5757 73.25%);
+box-shadow: 0px 4px 33px rgba(0, 0, 0, 0.44);
+border-radius: 33px;
+padding: 0px 60px !important;
 
     h2 {
         font-family: 'Racing Sans One';
@@ -9865,8 +9874,8 @@ border-radius: 15px;
         font-weight: 400;
         font-size: 35px;
         line-height: 44px;
-
-
+        text-transform: capitalize;
+        text-align: left;
     }
 
     .Connect-content {
@@ -9876,7 +9885,7 @@ border-radius: 15px;
         .Connect-btn {
             border: 3px solid #FFFFFF;
             border-radius: 9px;
-            height: 50px;
+            height: 75px;
             width: 200px;
             background-color: transparent;
             font-weight: 400;
@@ -9884,7 +9893,7 @@ border-radius: 15px;
             line-height: 45px;
             text-transform: capitalize;
             color: #FFFFFF;
-            border-radius: 50px;
+            border-radius: 10px;
         }
     }
 
@@ -10132,4 +10141,8 @@ color: #FFFFFF;
 
 .round-img{
     max-width: 450px;
+}
+
+.postion-relative{
+    position: relative;
 }
