added code icons

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10028,10 +10028,8 @@ padding: 0px 60px !important;
 
 .whats-app{
     width: 40px;
-    height: 45px;
     background: #3498db;
     position: fixed;
-    top: 50%;
     right: 0;
     z-index: 9999;
     display: flex;
@@ -10041,6 +10039,8 @@ padding: 0px 60px !important;
     margin-left: 5px;
     font-size: 16px;
     text-decoration: none !important;
+    top: 278px;
+    height: 38px;
 
 
     a{
@@ -10051,7 +10051,7 @@ padding: 0px 60px !important;
     }
     &.email-img{
         background: #ea2e30;
-        top: 57%;
+        top: 319px!important;
     }
     &:hover{
         width: 220px;
