--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8298,10 +8298,8 @@ area {
 
 .whats-app {
   width: 40px;
-  height: 45px;
   background: #3498db;
   position: fixed;
-  top: 50%;
   right: 0;
   z-index: 9999;
   display: flex;
@@ -8311,6 +8309,8 @@ area {
   margin-left: 5px;
   font-size: 16px;
   text-decoration: none !important;
+  top: 278px;
+  height: 38px;
 }
 .whats-app a {
   visibility: hidden;
@@ -8319,7 +8319,7 @@ area {
 }
 .whats-app.email-img {
   background: #ea2e30;
-  top: 57%;
+  top: 319px !important;
 }
 .whats-app:hover {
   width: 220px;
