--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6992,11 +6992,13 @@ area {
   background-image: url("../img/hero-bg-shape (2).svg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 120vh;
+  height: 130vh;
   width: 100%;
   display: grid;
   place-content: center;
   background-position-y: bottom;
+  position: relative;
+  top: 27rem;
 }
 .methodology::before {
   content: "";
@@ -7006,6 +7008,21 @@ area {
   width: 200px;
   height: 200px;
   background-repeat: no-repeat;
+  animation: linear infinite alternate;
+  animation-name: run;
+  animation-duration: 7s;
+}
+@keyframes run {
+  0% {
+    left: 0;
+  }
+  50% {
+    right: 0;
+  }
+  100% {
+    left: 0;
+    transform: scaleX(-1);
+  }
 }
 @media (max-width: 1199px) {
   .methodology {
@@ -7041,11 +7058,11 @@ area {
   border-style: dotted;
   border-color: #ffffff;
   border-radius: 3rem;
-  padding: 2rem;
+  padding: 4rem 2rem;
   margin: 3rem 0 3rem 0;
   width: 100%;
   position: relative;
-  min-height: 250px;
+  min-height: 330px;
 }
 .methodology .First-text::before {
   content: "";
@@ -7056,11 +7073,20 @@ area {
   width: 190px;
   height: 190px;
   background-repeat: no-repeat;
+  animation: MoveUpDown 10s linear infinite;
 }
 @media (max-width: 1199px) {
   .methodology .First-text::before {
     bottom: -63rem;
     left: 38rem;
+  }
+}
+@keyframes MoveUpDown {
+  0%, 100% {
+    left: 0;
+  }
+  50% {
+    left: 600px;
   }
 }
 @media (max-width: 575px) {
@@ -7100,7 +7126,7 @@ area {
   padding: 2rem;
   width: 100%;
   position: relative;
-  min-height: 250px;
+  min-height: 330px;
 }
 @media (max-width: 575px) {
   .methodology .second-text {
@@ -8447,7 +8473,14 @@ area {
 .horse {
   position: absolute;
   right: 0;
-  top: 60px;
+  height: 245px;
+  top: 180px;
+}
+@media (max-width: 1199px) {
+  .horse {
+    top: 154px;
+    right: 15px;
+  }
 }
 
 .horse-img::before {
@@ -8456,9 +8489,10 @@ area {
   width: 200px;
   height: 200px;
   position: absolute;
-  top: 36rem;
+  top: 38rem;
   z-index: 1;
   right: 0;
+  animation: rotated360 9s infinite linear;
 }
 
 .icon-1 {
