--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10175,7 +10175,7 @@ top: 10px;
 }
 
 .service-line{
-    background-image: url('/assets/CEO/hero-bg-shape\ \(1\).svg');
+    background-image: url('../img/hero-bg-shape\ \(1\).svg');
     height: 200vh;
     display: grid;
     place-items: center;
