--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10187,7 +10187,8 @@ top: 10px;
 }
 
 .d-gap{
-    gap:10px
+    gap:10px;
+    min-height: 200px;
 }
 
 .service-line{
@@ -10240,7 +10241,19 @@ color: #FFFFFF;
         right: 0;
         animation: rotated360 9s infinite linear;
     }
-}
+    &::after{
+        content: '';
+        background-image: url(../img/Home-3D-Cube.svg);
+        width: 200px;
+        height: 200px;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+        left: 0;
+        animation: rotated360 9s infinite linear;
+        background-repeat: no-repeat;
+    }
+    }
 .icon-1{
     position: absolute;
     bottom: 34%;
@@ -10258,5 +10271,26 @@ color: #FFFFFF;
     top: 78px;
     @media (max-width:767px){
         top: 30px;
+    }
+}
+.Heading{
+    font-size: 35px;
+    color: #ffffff;
+    font-weight: 700;
+    position: relative;
+    display: flex;
+    bottom: 55px;
+    right: 74px;
+    @media (min-width:768px) and (max-width:991px) {
+        bottom: 0;
+        top: 34px;
+        font-size: 18px;
+        right: 0;
+        
+    }
+    @media (max-width:767px){
+        top: 45px;
+        font-size: 10px;
+        left: 0;
     }
 }
