--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7049,6 +7049,8 @@ area {
 @media (max-width: 767px) {
   .methodology {
     height: 320vh;
+    animation: none;
+    left: 0;
   }
 }
 .methodology .methodology-session-text {
@@ -7100,7 +7102,12 @@ area {
 @media (max-width: 1199px) {
   .methodology .First-text::before {
     bottom: -63rem;
-    left: 38rem;
+    left: 0;
+  }
+}
+@media (max-width: 767px) {
+  .methodology .First-text::before {
+    bottom: -86rem;
   }
 }
 @keyframes MoveUpDown {
@@ -7108,7 +7115,7 @@ area {
     left: 0;
   }
   50% {
-    left: 600px;
+    left: 50px;
   }
 }
 @media (max-width: 575px) {
@@ -7135,7 +7142,7 @@ area {
   top: -12px;
   left: 0;
   right: 0;
-  background: radial-gradient(65.96% 140.73% at -1.79% 1.55%, #B105DC 0%, #005647 100%);
+  background: #005647;
   width: 70%;
   margin: auto;
   color: #ffffff;
@@ -7173,7 +7180,7 @@ area {
   top: -32px;
   left: 0;
   right: 0;
-  background: radial-gradient(65.96% 140.73% at -1.79% 1.55%, #B105DC 0%, #005647 100%);
+  background: #B105DC;
   width: 70%;
   margin: auto;
   color: #ffffff;
@@ -7559,12 +7566,13 @@ area {
 
 .card-align.active {
   opacity: 1;
+  background-color: #1E5FAB;
 }
 
 .card-align-left {
   margin-left: auto;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .card-align-left {
     position: relative;
     left: 22px;
@@ -7893,6 +7901,11 @@ area {
   right: 30px;
   top: -83px;
   animation: rotating 7s linear infinite;
+}
+@media (max-width: 767px) {
+  .tammina-session-reports::before {
+    left: 0;
+  }
 }
 
 .tammina-session {
@@ -8484,7 +8497,28 @@ area {
 }
 @media (max-width: 767px) {
   .service-line {
-    height: 413vh;
+    height: 470vh;
+  }
+}
+.service-line::after {
+  content: "";
+  background-image: url(../img/Home-3D-Cube.svg);
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  z-index: 1;
+  margin-top: 101rem;
+  animation: rotated360 9s infinite linear;
+  background-repeat: no-repeat;
+}
+@media (max-width: 767px) {
+  .service-line::after {
+    margin-top: 230rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) {
+  .service-line {
+    height: 320vh;
   }
 }
 
@@ -8497,6 +8531,11 @@ area {
 
 .round-img {
   max-width: 450px;
+}
+@media (max-width: 767px) {
+  .round-img {
+    max-width: 250px;
+  }
 }
 
 .postion-relative {
@@ -8526,6 +8565,12 @@ area {
   z-index: 1;
   right: 0;
   animation: rotated360 9s infinite linear;
+}
+@media (max-width: 767px) {
+  .horse-img::before {
+    animation: none;
+    left: 0;
+  }
 }
 .horse-img::after {
   content: "";
@@ -8570,23 +8615,8 @@ area {
   font-size: 35px;
   color: #ffffff;
   font-weight: 700;
-  position: relative;
   display: flex;
-  bottom: 55px;
-  right: 74px;
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .Heading {
-    bottom: 0;
-    top: 34px;
-    font-size: 18px;
-    right: 0;
-  }
-}
-@media (max-width: 767px) {
-  .Heading {
-    top: 45px;
-    font-size: 10px;
-    left: 0;
-  }
+  text-align: center;
+  position: relative;
+  bottom: 10rem;
 }/*# sourceMappingURL=style.css.map */
